--- a/practice.html
+++ b/practice.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="practice.css">
 </head>
 <body>
-    <button onclick="sumArray()">Run Now</button>
+    <button onclick="checkNumber(3)">Run Now</button>
 </body>
-<script src="practice.js"></script>
+<script src="practice1.js"></script>
+<script src="practice2.js"></script>
 </html>
